<resources>
    <string name="app_name">LuckyGames</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_n_lucky_game">Welcome to \n Lucky Game</string>
    <string name="get_started">Get Started</string>
    <string name="login_account">Login account</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_numer">Enter your mobile number</string>
    <string name="please_conform_your_country_code_and_n_enter_your_phone_number">Please conform your country code and enter your phone number</string>
    <string name="xxxxxxxxxx">XXXXXXXXXX</string>
    <string name="txt_send_otp">SEND OTP</string>
    <string name="btnContinue">Continue</string>
    <string name="phone_number">99333 88857</string>
    <string name="lucky_lottery">Lucky Game</string>
    <string name="lg_48101">48101</string>
    <string name="empty_notification">Empty notification</string>
    <string name="tricket_buy_list">Favorite tricked buy list</string>
    <string name="tricket_buy_or_selling_list">Ticked buy/selling list</string>
    <string name="ticket_payment">Customer details and payment</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="live">Live award</string>
    <string name="pay_rs_200">Pay RS-200</string>
    <string name="pay_200">200</string>
    <string name="_1st_prize">1st Prize to win</string>
    <string name="save">Save</string>
    <string name="payment">Payment</string>
    <string name="apply">Apply</string>
    <string name="ifsc_code">IFSC code *</string>
    <string name="sbin0014100">SBIN0014100</string>
    <string name="user_name">User name *</string>
    <string name="customer_name">Customer name *</string>
    <string name="sub_dealer_name">Sub dealer name *</string>
    <string name="total_amt">Total Amount</string>
    <string name="cus_num">Enter customer mobile number *</string>
    <string name="sub_num">Enter sub dealer mobile number *</string>
    <string name="create_sub_dealer">Create sub dealer</string>
    <string name="bank_name">Bank name *</string>
    <string name="account_no">Account no *</string>
    <string name="_4050_2010_2013">4050 2010 2013</string>
    <string name="sbi">SBI</string>
    <string name="search_your_luckey_number">Search your lucky number</string>
    <string name="ticket_id">Ticket ID:</string>
    <string name="add_more">Add more</string>
    <string name="buy">Buy</string>
    <string name="choose_any_one_options">Choose any one options</string>
    <string name="logouts">Are you sure want to logout ?</string>
    <string name="self">Self</string>
    <string name="customer">Customer</string>
    <string name="ok">Ok</string>
    <string name="close">Close</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_portal">Dealer portal</string>
    <string name="avaliable_tickets">Available Tickets - </string>
    <string name="earn_money">Earn Money - </string>
    <string name="sub_dealer_details">Sub dealer details </string>
    <string name="checking">Checking...</string>
    <string name="withdrawal">Withdrawal</string>
</resources>