<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.customar_fragment.CustomarProfileFragment">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/background_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoutIV"
        android:src="@drawable/ic_logout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="10dp"
        android:src="@drawable/ic_profile"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewBackground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_top_corned_background"
        android:orientation="vertical"
        android:padding="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit_text_white_background"
            android:ems="10"
            android:hint="Palash Nayek"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#8e8e8e"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bank_name"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_marginStart="6dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit_text_white_background"
            android:ems="10"
            android:hint="@string/sbi"
            android:inputType="textAutoCorrect"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#8e8e8e"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account_no"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_marginStart="6dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit_text_white_background"
            android:ems="10"
            android:hint="@string/_4050_2010_2013"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#8e8e8e"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ifsc_code"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_marginStart="6dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtRePassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit_text_white_background"
            android:ems="10"
            android:hint="@string/sbin0014100"
            android:inputType="none"
            android:padding="8dp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textColorHint="#8e8e8e"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/orange_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>