<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F5F5"
    tools:context=".fragments.dealer_fragment.AddSubDealerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edit_text_white_background"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_sub_dealer"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="30dp"
            android:text="@string/sub_num"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edittext_border"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_contentColor="@color/black"
                app:ccp_defaultNameCode="IND"
                app:ccp_showFlag="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phone_number_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textColorHint="#8e8e8e" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="20dp"
            android:text="@string/sub_dealer_name"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="Palash Nayek"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#8e8e8e"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/paymentBtn"
        android:background="@drawable/orange_button"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>